src/assets/style/main.scss
@import "colors";
@import "../../../node_modules/highlight.js/styles/default";
@import "../../../node_modules/highlight.js/styles/github";
@import "../../../node_modules/font-awesome/scss/variables";

$fa-font-path: "assets/fonts";

@import "../../../node_modules/font-awesome/scss/mixins";
@import "../../../node_modules/font-awesome/scss/path";
@import "../../../node_modules/font-awesome/scss/core";
@import "../../../node_modules/font-awesome/scss/larger";
@import "../../../node_modules/font-awesome/scss/fixed-width";
@import "../../../node_modules/font-awesome/scss/list";
@import "../../../node_modules/font-awesome/scss/bordered-pulled";
@import "../../../node_modules/font-awesome/scss/animated";
@import "../../../node_modules/font-awesome/scss/rotated-flipped";
@import "../../../node_modules/font-awesome/scss/stacked";
@import "../../../node_modules/font-awesome/scss/icons";
@import "../../../node_modules/font-awesome/scss/screen-reader";

html {
  overflow: hidden;
  height: 100%;
}

body {
  margin: 0;
  padding: 64px 0 0;
  font-family: 'Open Sans', sans-serif;
  font-size: 16px;
  font-weight: 300;
  line-height: 1.6;
  height: 100%;
  overflow: auto;
}

h1, h2 {
  font-family: "Roboto", "Helvetica Neue", sans-serif;
}

h1, h2, h3 {
  font-weight: normal;
  code {
    background: none;
    padding: 0;
    font-size: 100%;
    color: inherit;
    background-color: none;
    font-family: inherit;
  }
}

h1, h2, h3,
p, ul, li, {
  word-break: break-word;
}

pre {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.42857143;
  color: #333;
  word-break: break-all;
  word-wrap: break-word;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  border-radius: 4px;

  code {
    display: block;
    overflow-x: auto;
    padding: 0.5em;
    color: #333;
    background: transparent;
    -webkit-text-size-adjust: none;
    font-size: 100%;
    //margin-bottom: 10px;
  }
}

.diffbox pre {
  display: block;
  padding: 0;
  margin: 0;
  font-size: 13px;
  line-height: 1.42857143;
  color: #333;
  word-break: break-all;
  word-wrap: break-word;
  background-color: none;
  border: none;
  border-radius: 0;
}

code {
  white-space: pre-wrap;
  padding: 2px 4px;
  font-size: 90%;
  color: #c7254e;
  background-color: #f9f2f4;
  border-radius: 4px;

  a {
    color: #c7254e;
    text-decoration: underline;
    transition: all .2s;

    &:hover {
      color: #222;
    }
  }
}

table {
  max-width: 100%;
  overflow-x: scroll;
  border: 1px solid #ddd;
  border-spacing: 0;
  border-collapse: collapse;
  display: inline-block;

  code {
    background: none;
    padding: 0;
    font-size: 100%;
    color: inherit;
    background-color: none;
  }
}

th {
  background: #f1f1f1;
  padding: 10px;
  text-align: left;

  + th {
    border-left: 1px solid #eee;
  }
}

td {
  border-top: 1px solid #eee;
  vertical-align: top;
  padding: 10px;

  + td {
    border-left: 1px solid #eee;
  }
}

img[alt="angular1-wa-ionic-cli"], img[alt="angular1-wa-meteor-cli"] {
  width: 30%;
}

.side-nav {
  .step-item, .api-list-item {
    margin: 0;
    padding: 0;
    color: $lightBgColor;
  }

  .step-item {
    position: relative;

    $stepCircleRadius: 5px;

    &::before {
      content: "";
      height: $stepCircleRadius * 2;
      width: $stepCircleRadius * 2;
      background: #f9f9f9;
      border-radius: 50%;
      border: 2px solid $linkColor;
      position: absolute;
      top: 50%;
      margin-top: -$stepCircleRadius - 1px;
      left: 32px;
      margin-left: -$stepCircleRadius - 1px;
      z-index: 200;
      transition: all .2s ease-in-out;
    }

    &:hover {
      &::before {
        background: #dd1b16;
        border-color: #dd1b16;
      }

      .step-link {
        color: #dd1b16;
      }
    }

    &.active-step {
      &::before {
        background: $linkHoverColor;
        border-color: $linkHoverColor;
      }
    }

    &::after {
      content: "";
      height: 100%;
      width: 1px;
      background: $linkColor;
      top: 0;
      left: 32px;
      position: absolute;
      z-index: 100;
    }

    &:first-of-type {
      &::after {
        height: 50%;
        top: 50%;
      }
    }

    &:last-of-type {
      &::after {
        height: 50%;
        bottom: 50%;
      }
    }
  }

  .step-link {
    color: $linkColor;
    transition: ease-in-out;
  }

  .step-link {
    text-decoration: none;
    display: block;
    font-size: 14px;
    padding: 16px 16px 16px calc(16px + 48px);
    margin: 0;
  }

  .active-step {
    a {
      color: $linkActiveColor;
    }
  }

  .tutorial-steps-list, .apis-list, .apis-versions-list {
    list-style: none;
    padding-left: 0;
    margin-top: 8px;
  }
}

.apis-versions-list {
  margin: 0 !important;

  li {
    padding: 0;

    a {
      text-decoration: underline;
      color: black;
    }
  }
}

.dropdown-content {
  -moz-column-count: 2;
  -moz-column-width: 220px;
  -moz-column-rule: 1px solid #ECEFF1;
  -moz-column-gap: 0;

  column-count: 2;
  column-width: 220px;
  column-rule: 1px solid #ECEFF1;
  column-gap: 0;

  .tutorial-steps-list {
    margin: 0 !important;
    list-style: none;
    padding: 0;

    .step-item {
      padding: 5px 0 5px 10px;

      break-inside: avoid-column;

      a {
        text-decoration: none;
        font-size: small;
        color: black;
      }

      .bold {
        font-weight: bold;
      }
    }
  }
}

[md-button].md-primary {
  background: transparent !important;
  color: white !important;
  cursor: pointer !important;
  border: 2px solid #fff !important;
  border-radius: 3px solid #fff !important;
  font-weight: normal !important;

  &:hover {
    color: #fff !important;
    background-color: rgba(0, 0, 0, .1) !important;
  }

  &[disabled] {
    color: lightgray !important;
    cursor: not-allowed !important;
  }
}

[md-button]::after {
  display: none !important;
}

.tutorial-button {
  border: 2px solid #a6120d;
  background: transparent !important;
  color: #a6120d !important;
  box-shadow: none !important;
  padding: 0 10px !important;
  margin-bottom: 10px !important;
  transition: all .2s ease-in-out !important;

  &[disabled] {
    border-color: #dedede !important;
    color: #aaa !important;
    background: #dedede !important;
  }

  &:hover {
    background: #dd1b16 !important;
    color: #fff !important;
    border: 2px solid #dd1b16 !important;
  }

  &.active {
    background: #a6120d !important;
    color: #fff !important;
    border: 2px solid #a6120d !important;
  }
}

tutorial-page-content {
  pre {
    code[ngnonbindable] {
      background: $shellBgColor;
      display: block;
      width: 90%;
      border-radius: 5px;
      padding: 10px;
    }
  }

  blockquote {
    margin: 0;
    position: relative;
    background: $shellBgColor;
    border-radius: 5px;

    &:before {
      content: '!';
      font-weight: bold;
      position: absolute;
      vertical-align: top;
      font-size: 2vw;
      color: white;
      margin-left: 6px;
    }

    p {
      border-left: 1px solid white;
      padding: 10px;
      margin-left: 20px;
    }
  }
}

.diffbox {
  border-radius: 10px;

  .title-panel {
    border-radius: 10px 10px 0 0;
  }

  .code-container {
    border-radius: 0 0 10px 10px;
  }
}

api-ref-container {
  p, ul li {
    code {
      font-family: 'Open Sans', sans-serif;
    }
  }

  a {
    color: $darkerBgColor;
    text-decoration: none;
    font-weight: bold;
  }

  h3 {
    background: $shellBgColor;
    border-radius: 5px;
    padding: 4px;
    margin-top: 30px;
  }

  table {
    width: 100%;
    background: $shellBgColor;
    border-radius: 5px;
    border-spacing: 0;

    thead {
      background: $lightBgColor;
      color: $shellBgColor;
      border-radius: 5px;

      tr {
        background: $lightBgColor;
        border-radius: 5px;

        th {
          padding: 6px;
        }
      }
    }

    tbody {
      td {
        padding: 5px;
      }
    }
  }
}

.l-pinned-top {
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
}

.l-left {
  float: left;
}

.l-right {
  float: right;
}

.l-relative,
.docs-content {
  position: relative;
}

.l-absolute {
  position: absolute;
}

.l-fixed {
  position: fixed;
}

.l-offset-side-nav {
  padding-left: 232px;
}

diffbox-container {
  padding-left: 36px;
  overflow: hidden;
  display: block;

  .hljs-comment {
    color: #777;
  }

  pre {
    margin: 0;
    padding: 0;

    background-color: transparent;

    &.line-added {
      background: #eaffea;
    }

    &.line-removed {
      background: #ff9ea2;
    }
  }
}

.side-nav {
  background: #f6f6f6;
  width: 100%;
  bottom: 0;
  z-index: 100;

  ul {
    margin-top: 8px;
  }
}

.side-nav h1 {
  padding: 16px 0 0 32px;
}

@media screen and (min-width: 750px) {
  .tutorials-container, .api-container {
    margin-top: 40px;
  }

  .tutorial-inner-container, .api-container {
    display: flex;
  }

  .side-nav {
    width: 40%;
    height: 100%;
  }

  .tutorial-content, .api-content {
    width: 60%;
  }

  [md-raised-button] {
    margin-bottom: 0px !important;
  }
}

@media screen and (min-width: 1000px) {
  .tutorials-container, .api-container {
    width: 80%;
    margin: 40px auto 0;
  }

  .top-navigation {
    display: flex;
    justify-content: space-between;
  }

  .side-nav {
    width: 25%;
    border-radius: 2px;
  }

  .tutorial-content, .api-content {
    max-width: 75%;
    margin-left: 30px;
  }
}

.tutorials-container, .api-container {
  color: #555;

  h1 {
    font-family: "Roboto", "Helvetica Neue", sans-serif;
    color: #111;
    line-height: 1.1;
  }

  p {
    color: #555;
  }
}

.main-toolbar md-toolbar-row {
  height: auto !important;
}

.nav-links [md-button] {
  min-width: 0 !important;
  font-weight: 300 !important;
  font-family: inherit !important;
}

.nav-links .md-primary {
  color: #555 !important;
}

diffbox-container {
  padding-left: 36px;
  overflow: hidden;
  display: block;

  .hljs-comment {
    color: #777;
  }

  pre {
    margin: 0;
    padding: 0;

    background-color: transparent;

    &.line-added {
      background: #eaffea;
    }

    &.line-removed {
      background: #ff9ea2;
    }
  }
}

.terminal-input {
  font-size: 13px;
  font-family: monospace;
  background: transparent;
  border: none;
  color: rgb(51, 51, 51);
  outline: none;
  margin-left: 4.5px;
  margin-top: 5px;
  resize: none;
}

.anchor-offset {
  display: block;
  position: relative;
  top: -90px;
  visibility: hidden;
}

.improve-code {
  a {
    color: black;
    padding: 6px;
  }
}

@import "../../app/app.component.scss";
@import "../../app/website/main-page/main.component.scss";
@import "../../app/website/meteor-rxjs/meteor-rxjs.component.scss";
@import "../../app/website/api-container/api-container.component.scss";
@import "../../app/website/manifesto-page/manifesto-page.component.scss";
@import "../../app/website/tutorials-container/tutorials-container.component.scss";
@import "../../app/website/tutorials-versions/tutorial-versions.scss";
@import "../../app/website/support-pages/support.styles.scss";
@import "../../app/website/angular-whatsapp-intro/angular-whatsapp-intro.component.scss";
@import "../../app/website/not-found/not-found.component.scss";

